# GinRummyBot

./: CMakeLists.txt  card.cpp  card.h  cardProperties.h  deck.cpp  deck.h  game.cpp  game.h  main.cpp  mcts.cpp  mcts.h  node.cpp  node.h  player.cpp  player.h
